Heap changes, Moved include directory, Initial VFS design

--- a/Kernel/Makefile
+++ b/Kernel/Makefile
@@ -1,16 +1,16 @@
 # Makefile for SimpleOS Kernel
 
-SOURCES= $(patsubst %.s,%.o,$(wildcard *.s)) $(patsubst %.c,%.o,$(wildcard *.c)) $(patsubst %.c,%.o,$(wildcard ./lib/*.c)) $(patsubst %.c,%.o,$(wildcard ./drivers/*.c))
+SOURCES= $(patsubst %.s,%.o,$(wildcard *.s)) $(patsubst %.c,%.o,$(wildcard *.c)) $(patsubst %.c,%.o,$(wildcard ./lib/*.c)) $(patsubst %.c,%.o,$(wildcard ./drivers/*.c)) $(patsubst %.c,%.o,$(wildcard ./fs_binds/*.c))
 
 CC=gcc
-CFLAGS=-nostdlib -nostdinc -fno-builtin -I include -fno-stack-protector -m32
+CFLAGS=-nostdlib -nostdinc -fno-builtin -I ../Include -fno-stack-protector -m32
 LDFLAGS=-Tlink.ld -melf_i386
 ASFLAGS=-felf32
 
 all: $(SOURCES) link
 
 clean:
-	-rm *.o ./Build/Kernel
+	-rm *.o ./fs_binds/*.o ./drivers/*.o ./lib/*.o ./Build/Kernel
 
 link:
 	ld $(LDFLAGS) -o ./Build/Kernel $(SOURCES)
