CPUID Support Mouse Support Input abstraction Cleanup

--- a/Kernel/Makefile
+++ b/Kernel/Makefile
@@ -1,6 +1,6 @@
 # Makefile for SimpleOS Kernel
 
-SOURCES= $(patsubst %.s,%.o,$(wildcard *.s)) $(patsubst %.c,%.o,$(wildcard *.c)) $(patsubst %.c,%.o,$(wildcard ../lib/*.c)) $(patsubst %.c,%.o,$(wildcard ./drivers/*.c)) $(patsubst %.c,%.o,$(wildcard ./fs/*.c)) $(patsubst %.c,%.o,$(wildcard ./scheduler/*.c)) $(patsubst %.c,%.o,$(wildcard ./mm/*.c)) $(patsubst %.s,%.o,$(wildcard ./mm/*.s))
+SOURCES= $(patsubst %.s,%.o,$(wildcard *.s)) $(patsubst %.c,%.o,$(wildcard *.c)) $(patsubst %.c,%.o,$(wildcard ../lib/*.c)) $(patsubst %.c,%.o,$(wildcard ./drivers/*.c)) $(patsubst %.c,%.o,$(wildcard ./fs/*.c)) $(patsubst %.c,%.o,$(wildcard ./scheduler/*.c)) $(patsubst %.c,%.o,$(wildcard ./mm/*.c)) $(patsubst %.s,%.o,$(wildcard ./mm/*.s)) $(patsubst %.c,%.o,$(wildcard ./input/*.c)) $(patsubst %.c,%.o,$(wildcard ./timers/*.c)) $(patsubst %.c,%.o,$(wildcard ./cpu/*.c)) $(patsubst %.s,%.o,$(wildcard ./cpu/*.s))
 
 CC=gcc
 CFLAGS=-nostdlib -nostdinc -fno-builtin -I ../Include -fno-stack-protector -m32
@@ -10,7 +10,7 @@ ASFLAGS=-felf32
 all: $(SOURCES) link
 
 clean:
-	-rm *.o ./fs/*.o ./drivers/*.o ./mm/*.o ./scheduler/*.o ../lib/*.o ./Build/Kernel
+	-rm *.o ./fs/*.o ./drivers/*.o ./mm/*.o ./scheduler/*.o ../lib/*.o ./cpu/*.o ./timers/*.o ./input/*.o ./Build/Kernel
 
 link:
 	ld $(LDFLAGS) -o ./Build/Kernel $(SOURCES)
