Updated to GRUB2 (Version 1.98 at time of writing) using GRUB commands to install disk images

--- a/InitRD/Compiler/Makefile
+++ b/InitRD/Compiler/Makefile
@@ -1,7 +1,8 @@
 CC=gcc 
-CFLAGS=-I ../../Include/initrd/ -I ../../Include/types -w 
+CFLAGS=-I ../../Include/initrd/ -I ../../Include/types -w  -I ../../Shared/headers
+LDFLAGS=-melf_i386
 
-main: main.o 
+main: main.o md5.o md5use.o
 
 clean:
 	rm *.o
