Getting closer to user mode. Warning this checkout breaks the kernel (pagefault on boot) this is due to the kernel jumping to user mode without the proper flags setup in the page directory

--- a/Kernel/Makefile
+++ b/Kernel/Makefile
@@ -35,6 +35,9 @@ rfs_dirs_created:
 list_dirs:
 	-@for file in $(ALLFILES); do fgrep -H -e print_directory $$file; done; true
 
+maps:
+	-@for file in $(ALLFILES); do fgrep -H -e map $$file; done; true
+
 
 .s.o:
 	@nasm $(ASFLAGS) $<
