The heap was completely rewritten and several bugs were fixed, the system is now much more stable (Doesn't crash all the time yay!!)

--- a/Kernel/Makefile
+++ b/Kernel/Makefile
@@ -30,5 +30,8 @@ link:
 todo:
 	-@for file in $(ALLFILES); do fgrep -H -e TODO -e FIXME $$file; done; true
 
+todso:
+	-@for file in $(ALLFILES); do fgrep -H -e allocateFrame $$file; done; true
+
 .s.o:
 	@nasm $(ASFLAGS) $<
