--- a/bin/RamdiskFolder/kernel.config
+++ b/bin/RamdiskFolder/kernel.config
@@ -1,3 +1,3 @@
-kernel.debug_state = 0
-kernel.onstart = /system/root/Line
+kernel.debug_state = 1
+kernel.onstart = /system/Line
 kernel.restart_onstart = yes
