Unification disabled, heap needs fixing bigtime. Fixed a few bugs and a silly little memalloc in the file evaluator

--- a/Tools/InitRD/Makefile
+++ b/Tools/InitRD/Makefile
@@ -1,9 +1,9 @@
 CC=gcc
-CFLAGS= -w  -I ../../Shared/headers -m32
-LDFLAGS=-melf_i386
+CFLAGS= -w  -I ../../Shared/headers
+LDFLAGS=
 
 main: main.o md5.o md5use.o
-	gcc -o ./Build/RamdiskCompiler main.o md5.o md5use.o -m32
+	gcc -o ./Build/RamdiskCompiler main.o md5.o md5use.o
 
 clean:
 	rm ./Build/RamdiskCompiler *.o
