--- a/Tools/InitRD/Makefile
+++ b/Tools/InitRD/Makefile
@@ -3,7 +3,7 @@ CFLAGS= -w  -I ../../Shared/headers
 LDFLAGS=
 
 main: main.o md5.o md5use.o
-	gcc -o ./Build/RamdiskCompiler main.o md5.o md5use.o
+	gcc -o ./bin/RamdiskCompiler main.o md5.o md5use.o
 
 clean:
-	rm ./Build/RamdiskCompiler *.o
+	rm ./bin/RamdiskCompiler *.o
