--- a/etc/grub.cfg
+++ b/etc/grub.cfg
@@ -1,8 +1,8 @@
 set timeout=0
 set default=0
 
-menuentry "Run SimpleOS" {
-multiboot /boot/kernel
-module /boot/ramdisk
-boot
+menuentry "Dawn" {
+  multiboot /boot/kernel
+  module /boot/ramdisk
+  boot
 }
